--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,32 +7,54 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/text_view_initial"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/space_default"
+        android:text="@string/fill_name_to_start"
+        android:textColor="@android:color/black"
+        android:textSize="@dimen/font_default"
+        app:layout_constraintBottom_toTopOf="@id/button_start"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
         android:id="@+id/text_view_question"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:gravity="bottom"
-        app:layout_constraintVertical_weight="2"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/question_radio_group"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_weight="2"
         tools:text="Some Question here" />
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
         android:id="@+id/question_radio_group"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintVertical_weight="8"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/button_action"
-        app:layout_constraintTop_toBottomOf="@id/text_view_question">
+        app:layout_constraintTop_toBottomOf="@id/text_view_question"
+        app:layout_constraintVertical_weight="8" />
 
-
-    </RadioGroup>
 
     <Button
         android:id="@+id/button_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="startQuiz"
-        android:text="Start"
+        android:text="@string/start"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,9 +66,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="Answer"
+        android:text="@string/answer"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
+
+    <TextView
+        android:id="@+id/text_view_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/space_default"
+        android:text="@string/generic_error"
+        android:textColor="@android:color/black"
+        android:textSize="@dimen/font_default"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/button_error"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="startQuiz"
+        android:text="@string/try_again"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
