--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="space_default">16dp</dimen>
     <dimen name="font_default">16sp</dimen>
+    <dimen name="space_medium">12dp</dimen>
 </resources>
