--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_marginTop="@dimen/space_default"
-        android:maxLines="1"
+        android:maxLines="0"
+        android:inputType="textShortMessage"
         android:padding="@dimen/space_medium"
         android:background="@drawable/gray_border"
         app:layout_constraintTop_toBottomOf="@id/text_view_initial" />
